--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sanity/vision": "3.42.1",
     "@sanity/visual-editing": "1.8.21",
     "@sanity/webhook": "4.0.4",
+    "@vercel/analytics": "^1.3.2",
     "@vercel/og": "0.6.2",
     "classnames": "2.5.1",
     "date-fns": "3.6.0",
